--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@ background-image: url('https://images.unsplash.com/photo-1541339907198-e08756ded
 </head>
 <body>
 
-<h2>21MCC2144_MST1_PRITAM</h2>
+<h2>21MCC2144_PRITAM</h2>
 <h3>By using Microsoft Azure Portal</h3>
 
-<h1 id="myHeader">LAB_MST-1</h1>
+<h1 id="myHeader">LAB_PRACTICAL</h1>
 
-<h1 id="myHeader2">By Using File Explorer</h1>
+<h1 id="myHeader2">By Using Github account</h1>
 <h3 id="dec">BEST UNIVERSTIY FOR CLOUD COMPUTING IN INDIA :-
 		CHANDIGARH UNIVERSITY........... </h3>
 
